kubernetes/apps/services/podinfo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: podinfo
  labels:
    app: podinfo
spec:
  ports:
    - port: 9898
      targetPort: 9898
      protocol: TCP
      name: http
  selector:
    app: podinfo
  type: ClusterIP
